-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.9.1
-
None
-
-
2a468dac4 (dev), da9d41816 (6.10), 9c33edead (6.9), c2e11ce56 (tqtc/lts-6.8)
Compilation error for Windows 32 bit
uint32_t requiredDataSize = m_format.bytesForFrames(requiredFrames); auto hostBufferSpan = as_writable_bytes(QSpan{ hostBuffer, requiredDataSize });
qwindowsaudiosink.cpp(346): error C2398: Element '2': conversion from 'uint32_t' to 'qsizetype' requires a narrowing conversion
possible fix:
uint32_t requiredDataSize = m_format.bytesForFrames(requiredFrames); auto hostBufferSpan = as_writable_bytes(QSpan{ hostBuffer, qsizetype(requiredDataSize) });