WASAPI: win32 32bit compile fix

32bit builds emit:
conversion from 'uint32_t' to 'qsizetype' requires a narrowing
conversion

Fixes: QTBUG-137360
Pick-to: 6.10 6.9 6.8
Change-Id: I789b7f225820513ae101f649b5d3c49a705afe86
Reviewed-by: Artem Dyomin <artem.dyomin@qt.io>